// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs renderTabBar custom-tab-bar 1`] = `
<div
  class="ezd-tabs ezd-tabs-top"
>
  <div>
    custom-tab-bar
  </div>
  <div
    class="ezd-tabs-content-holder"
  >
    <div
      class="ezd-tabs-content ezd-tabs-content-top"
    >
      <div
        aria-hidden="false"
        class="ezd-tabs-tabpane ezd-tabs-tabpane-active"
        role="tabpanel"
        tabindex="0"
      >
        foo
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="ezd-tabs ezd-tabs-top ezd-tabs-rtl"
>
  <div
    class="ezd-tabs-nav"
    role="tablist"
  >
    <div
      class="ezd-tabs-nav-wrap"
    >
      <div
        class="ezd-tabs-nav-list"
        style="transform:translate(0px, 0px)"
      >
        <div
          class="ezd-tabs-tab ezd-tabs-tab-active"
        >
          <div
            aria-selected="true"
            class="ezd-tabs-tab-btn"
            role="tab"
            tabindex="0"
          >
            xx
          </div>
        </div>
        <div
          class="ezd-tabs-ink-bar ezd-tabs-ink-bar-animated"
        />
      </div>
    </div>
    <div
      class="ezd-tabs-nav-operations ezd-tabs-nav-operations-hidden"
    >
      <button
        aria-controls="null-more-popup"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-hidden="true"
        class="ezd-tabs-nav-more"
        id="null-more"
        style="visibility:hidden;order:1"
        tabindex="-1"
        type="button"
      >
        <span
          aria-label="ellipsis"
          class="anticon anticon-ellipsis"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="ellipsis"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="ezd-tabs-content-holder"
  >
    <div
      class="ezd-tabs-content ezd-tabs-content-top"
    >
      <div
        aria-hidden="false"
        class="ezd-tabs-tabpane ezd-tabs-tabpane-active"
        role="tabpanel"
        tabindex="0"
      />
    </div>
  </div>
</div>
`;

exports[`Tabs tabBarGutter should work 1`] = `
<div
  class="ezd-tabs ezd-tabs-top"
>
  <div
    class="ezd-tabs-nav"
    role="tablist"
  >
    <div
      class="ezd-tabs-nav-wrap"
    >
      <div
        class="ezd-tabs-nav-list"
        style="transform:translate(0px, 0px)"
      >
        <div
          class="ezd-tabs-tab ezd-tabs-tab-active"
        >
          <div
            aria-selected="true"
            class="ezd-tabs-tab-btn"
            role="tab"
            tabindex="0"
          />
        </div>
        <div
          class="ezd-tabs-tab ezd-tabs-tab-active"
          style="margin-left:0"
        >
          <div
            aria-selected="true"
            class="ezd-tabs-tab-btn"
            role="tab"
            tabindex="0"
          />
        </div>
        <div
          class="ezd-tabs-tab ezd-tabs-tab-active"
          style="margin-left:0"
        >
          <div
            aria-selected="true"
            class="ezd-tabs-tab-btn"
            role="tab"
            tabindex="0"
          />
        </div>
        <div
          class="ezd-tabs-ink-bar ezd-tabs-ink-bar-animated"
        />
      </div>
    </div>
    <div
      class="ezd-tabs-nav-operations ezd-tabs-nav-operations-hidden"
    >
      <button
        aria-controls="null-more-popup"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-hidden="true"
        class="ezd-tabs-nav-more"
        id="null-more"
        style="margin-left:0;visibility:hidden;order:1"
        tabindex="-1"
        type="button"
      >
        <span
          aria-label="ellipsis"
          class="anticon anticon-ellipsis"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="ellipsis"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="ezd-tabs-content-holder"
  >
    <div
      class="ezd-tabs-content ezd-tabs-content-top"
    >
      <div
        aria-hidden="false"
        class="ezd-tabs-tabpane ezd-tabs-tabpane-active"
        role="tabpanel"
        tabindex="0"
      />
      <div
        aria-hidden="false"
        class="ezd-tabs-tabpane ezd-tabs-tabpane-active"
        role="tabpanel"
        tabindex="0"
      />
      <div
        aria-hidden="false"
        class="ezd-tabs-tabpane ezd-tabs-tabpane-active"
        role="tabpanel"
        tabindex="0"
      />
    </div>
  </div>
</div>
`;

exports[`Tabs tabBarGutter should work 2`] = `
<div
  class="ezd-tabs ezd-tabs-left"
>
  <div
    class="ezd-tabs-nav"
    role="tablist"
  >
    <div
      class="ezd-tabs-nav-wrap"
    >
      <div
        class="ezd-tabs-nav-list"
        style="transform:translate(0px, 0px)"
      >
        <div
          class="ezd-tabs-tab ezd-tabs-tab-active"
        >
          <div
            aria-selected="true"
            class="ezd-tabs-tab-btn"
            role="tab"
            tabindex="0"
          />
        </div>
        <div
          class="ezd-tabs-tab ezd-tabs-tab-active"
          style="margin-top:0"
        >
          <div
            aria-selected="true"
            class="ezd-tabs-tab-btn"
            role="tab"
            tabindex="0"
          />
        </div>
        <div
          class="ezd-tabs-tab ezd-tabs-tab-active"
          style="margin-top:0"
        >
          <div
            aria-selected="true"
            class="ezd-tabs-tab-btn"
            role="tab"
            tabindex="0"
          />
        </div>
        <div
          class="ezd-tabs-ink-bar ezd-tabs-ink-bar-animated"
        />
      </div>
    </div>
    <div
      class="ezd-tabs-nav-operations ezd-tabs-nav-operations-hidden"
    >
      <button
        aria-controls="null-more-popup"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-hidden="true"
        class="ezd-tabs-nav-more"
        id="null-more"
        style="margin-left:0;visibility:hidden;order:1"
        tabindex="-1"
        type="button"
      >
        <span
          aria-label="ellipsis"
          class="anticon anticon-ellipsis"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="ellipsis"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="ezd-tabs-content-holder"
  >
    <div
      class="ezd-tabs-content ezd-tabs-content-left"
    >
      <div
        aria-hidden="false"
        class="ezd-tabs-tabpane ezd-tabs-tabpane-active"
        role="tabpanel"
        tabindex="0"
      />
      <div
        aria-hidden="false"
        class="ezd-tabs-tabpane ezd-tabs-tabpane-active"
        role="tabpanel"
        tabindex="0"
      />
      <div
        aria-hidden="false"
        class="ezd-tabs-tabpane ezd-tabs-tabpane-active"
        role="tabpanel"
        tabindex="0"
      />
    </div>
  </div>
</div>
`;

exports[`Tabs tabPosition remove card 1`] = `
<div
  class="ezd-tabs ezd-tabs-left"
>
  <div
    class="ezd-tabs-nav"
    role="tablist"
  >
    <div
      class="ezd-tabs-nav-wrap"
    >
      <div
        class="ezd-tabs-nav-list"
        style="transform:translate(0px, 0px)"
      >
        <div
          class="ezd-tabs-tab ezd-tabs-tab-active"
        >
          <div
            aria-selected="true"
            class="ezd-tabs-tab-btn"
            role="tab"
            tabindex="0"
          >
            foo
          </div>
        </div>
        <div
          class="ezd-tabs-ink-bar ezd-tabs-ink-bar-animated"
        />
      </div>
    </div>
    <div
      class="ezd-tabs-nav-operations ezd-tabs-nav-operations-hidden"
    >
      <button
        aria-controls="null-more-popup"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-hidden="true"
        class="ezd-tabs-nav-more"
        id="null-more"
        style="visibility:hidden;order:1"
        tabindex="-1"
        type="button"
      >
        <span
          aria-label="ellipsis"
          class="anticon anticon-ellipsis"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="ellipsis"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M176 511a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0zm280 0a56 56 0 10112 0 56 56 0 10-112 0z"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="ezd-tabs-extra-content"
    >
      xxx
    </div>
  </div>
  <div
    class="ezd-tabs-content-holder"
  >
    <div
      class="ezd-tabs-content ezd-tabs-content-left"
    >
      <div
        aria-hidden="false"
        class="ezd-tabs-tabpane ezd-tabs-tabpane-active"
        role="tabpanel"
        tabindex="0"
      >
        foo
      </div>
    </div>
  </div>
</div>
`;
